--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <style>
     @font-face {
       font-family: 'InspectorGeneral';
-      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf')
-           format('truetype');
+      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf') format('truetype');
     }
   </style>
 
@@ -41,6 +40,7 @@
       height: auto;
       user-select: none;
       -webkit-user-drag: none;
+      user-drag: none;
       margin-bottom: 1rem;
     }
     #splash button {
@@ -53,12 +53,11 @@
       cursor: pointer;
     }
 
-    /* ROUND LAYOUT */
+    /* ROUND LAYOUT WRAPPER */
     #game { display: none; }
     .roundContainer {
       display: flex;
       gap: 1rem;
-      align-items: flex-start;
       max-width: 1200px;
       margin: 1rem auto;
       padding: 0 1rem;
@@ -76,7 +75,7 @@
       border: 4px solid #ccc;
       border-radius: 4px;
       touch-action: none;
-      width: 100%;
+      /* removed fixed height so image auto‐sizes to its native aspect */
     }
     .zoom-container img {
       display: block;
@@ -86,32 +85,35 @@
       cursor: grab;
       user-select: none;
       -webkit-user-drag: none;
+      user-drag: none;
     }
 
     /* MAP & CONTROLS */
     #map {
       flex: 1;
-      height: 400px;    /* ↑ increased from 300px */
+      height: 300px;
     }
     #controls {
       display: flex;
       gap: 1rem;
       align-items: center;
     }
-    #controls label { white-space: nowrap; }
+    #controls label {
+      white-space: nowrap;
+    }
     #slider {
       flex: 1;
-      accent-color: #007bff;  /* match button color */
+      accent-color: #d64541;
     }
     input[type='range']::-webkit-slider-thumb {
-      background: #007bff;    /* match button color */
+      background: #d64541;
       border: none;
       height: 16px;
       width: 16px;
       border-radius: 8px;
     }
     #guessButton {
-      background: #007bff;    /* changed to blue */
+      background: #d64541;
       color: white;
       border: none;
       padding: 0.75em 1.5em;
@@ -154,12 +156,17 @@
       margin: 1rem auto;
       padding: 0 1rem;
     }
-    #finalArea { display: flex; gap: 1rem; }
+    #finalArea {
+      display: flex;
+      gap: 1rem;
+    }
     #finalMap {
       flex: 1;
-      height: 400px;   /* ↑ increased from 300px */
+      height: 300px;
     }
-    #scoreTable { flex: 1; }
+    #scoreTable {
+      flex: 1;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -178,7 +185,7 @@
   <div id="splash">
     <img id="splashLogo"
          src="splashpagelogo.png"
-         alt="MOMGUESSR"
+         alt="MOMGUESSR Logo"
          draggable="false">
     <button id="playBtn">Play</button>
   </div>
@@ -186,7 +193,6 @@
   <!-- GAME SCREEN -->
   <div id="game">
     <div class="roundContainer">
-
       <!-- IMAGE SIDE -->
       <div id="imageArea">
         <div class="zoom-container">
@@ -196,8 +202,7 @@
 
       <!-- MAP + CONTROLS SIDE -->
       <div id="interactionArea">
-        <div id="map"></div>  <!-- ↑ required for Leaflet -->
-
+        <div id="map"></div>        <!-- ← Ensure this never gets removed! -->
         <div id="controls">
           <label>
             <span id="labelText">Year:</span>
@@ -207,7 +212,7 @@
                  id="slider"
                  min="1900"
                  max="2025"
-                 draggable="false">
+                 draggable="false"/>
           <button id="guessButton">Make Guess</button>
         </div>
       </div>
@@ -252,6 +257,7 @@
   <!-- LEAFLET JS -->
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
+    // STATE
     let map, guessMarker, correctMarker, connectionLine, finalMap;
     let allPhotos = [], gamePhotos = [], current = 0, rounds = [];
     const MAX_ROUNDS = 5,
@@ -259,7 +265,7 @@
           YEAR_MAX = 2025,
           EARTH_HALF_CIRC = 20037.5;
 
-    // UI references
+    // NODES
     const splash      = document.getElementById('splash'),
           playBtn     = document.getElementById('playBtn'),
           gameDiv     = document.getElementById('game'),
@@ -277,94 +283,104 @@
           resultsBody = document.getElementById('resultsBody'),
           totalScoreE = document.getElementById('totalScore');
 
-    // Load photos
+    // LOAD PHOTOS
     fetch('photos.json')
-      .then(r => r.json())
-      .then(a => allPhotos = a)
-      .catch(_ => alert('Could not load photos.json'));
+      .then(r=>r.json())
+      .then(a=>allPhotos=a)
+      .catch(_=>alert('Could not load photos.json'));
 
-    // Slider init
+    // SLIDER
     slider.min = YEAR_MIN;
     slider.max = YEAR_MAX;
-    slider.addEventListener('input', () => {
-      yearDisp.textContent = slider.value;
-    });
+    slider.addEventListener('input', ()=> yearDisp.textContent = slider.value);
 
-    // Image pan/zoom
+    // IMAGE PAN/ZOOM
     let scale=1, ox=0, oy=0, sx, sy, panning=false;
-    function updateImg() {
+    function updateImg(){
       const c=photoEl.parentNode,
             cw=c.clientWidth, ch=c.clientHeight,
             sw=cw*scale, sh=ch*scale,
             minX=Math.min(0,cw-sw), minY=Math.min(0,ch-sh);
-      ox=Math.max(minX, Math.min(ox,0));
-      oy=Math.max(minY, Math.min(oy,0));
-      photoEl.style.transform = `translate(${ox}px,${oy}px) scale(${scale})`;
+      ox=Math.max(minX,Math.min(ox,0));
+      oy=Math.max(minY,Math.min(oy,0));
+      photoEl.style.transform=`translate(${ox}px,${oy}px) scale(${scale})`;
     }
-    photoEl.addEventListener('wheel', e => {
+    photoEl.addEventListener('wheel',e=>{
       e.preventDefault();
-      scale = Math.min(Math.max(scale + (e.deltaY>0?-0.1:0.1),1),5);
+      scale=Math.min(Math.max(scale+(e.deltaY>0?-0.1:0.1),1),5);
       updateImg();
     });
-    photoEl.addEventListener('mousedown', e => {
+    photoEl.addEventListener('mousedown',e=>{
       panning=true; sx=e.clientX-ox; sy=e.clientY-oy;
       photoEl.style.cursor='grabbing';
     });
-    document.addEventListener('mousemove', e => {
+    document.addEventListener('mousemove',e=>{
       if(!panning) return;
       ox=e.clientX-sx; oy=e.clientY-sy; updateImg();
     });
-    document.addEventListener('mouseup', () => {
+    document.addEventListener('mouseup',()=>{
       panning=false; photoEl.style.cursor='grab';
     });
 
-    // Start
-    playBtn.onclick = () => {
+    // START
+    playBtn.onclick=()=>{
       splash.style.display='none';
       gameDiv.style.display='block';
       startGame();
     };
 
-    function startGame() {
-      gamePhotos = shuffle(allPhotos).slice(0, MAX_ROUNDS);
-      current = 0; rounds=[];
+    function startGame(){
+      gamePhotos=shuffle(allPhotos).slice(0,MAX_ROUNDS);
+      current=0; rounds=[];
       nextRound();
     }
 
-    function nextRound() {
+    function nextRound(){
+      // hide feedback + reset markers
       feedback.style.display='none';
       captionFb.textContent='';
       labelText.textContent='Year:';
       guessBtn.style.display='inline-block';
-      [guessMarker,correctMarker,connectionLine].forEach(m=>m&&m.remove());
-      if(map) map.remove();
+
+      // remove old markers/lines + clear vars
+      if(guessMarker){ guessMarker.remove(); guessMarker=null; }
+      if(correctMarker){ correctMarker.remove(); correctMarker=null; }
+      if(connectionLine){ connectionLine.remove(); connectionLine=null; }
+
+      // destroy old map if present
+      if(map){ map.remove(); map=null; }
+
       if(current>=gamePhotos.length) return showResults();
 
-      // Photo
-      const p = gamePhotos[current];
+      // load photo
+      const p=gamePhotos[current];
       scale=1; ox=oy=0; updateImg();
       photoEl.src=p.src;
+
+      // reset slider
       const mid=(YEAR_MIN+YEAR_MAX)/2|0;
-      slider.value=mid; yearDisp.textContent=mid;
+      slider.value=mid;
+      yearDisp.textContent=mid;
 
-      // Map
+      // init map
       map=L.map('map').setView([0,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19})
-       .addTo(map);
+      L.tileLayer(
+        'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}
+      ).addTo(map);
 
-      map.on('click', e=>{
-        const opts={zIndexOffset:1000};
-        if(guessMarker) {
-          guessMarker.setLatLng(e.latlng);
-        } else {
+      map.on('click',e=>{
+        if(!guessMarker){
           guessMarker=L.circleMarker(e.latlng,{
-            color:'black',fillColor:'black',fillOpacity:1,radius:8,
-            ...opts
+            color:'black',
+            fillColor:'black',
+            fillOpacity:1,
+            radius:8
           }).addTo(map)
             .bindPopup('Your guess')
             .openPopup();
+        } else {
+          guessMarker.setLatLng(e.latlng);
         }
-        guessMarker.bringToFront();
         map.userLatLng=e.latlng;
       });
 
@@ -372,8 +388,8 @@
       guessBtn.disabled=false;
     }
 
-    guessBtn.onclick = () => {
-      if(!map||!map.userLatLng) return alert('Click the map to guess!');
+    guessBtn.onclick=()=>{
+      if(!map||!map.userLatLng) return alert('Click map to place your guess.');
 
       map.off('click');
       slider.disabled=true;
@@ -381,8 +397,9 @@
       guessBtn.style.display='none';
       labelText.textContent='Your Guess:';
 
-      const p=gamePhotos[current], gl=map.userLatLng;
-      const distKm=haversine(p.lat,p.lng,gl.lat,gl.lng),
+      const p=gamePhotos[current],
+            gl=map.userLatLng,
+            distKm=haversine(p.lat,p.lng,gl.lat,gl.lng),
             distMi=(distKm*0.621371).toFixed(1),
             errY=Math.abs(slider.value-p.year),
             sDist=Math.max(0,Math.round((1-distKm/EARTH_HALF_CIRC)*5000)),
@@ -392,7 +409,7 @@
       rounds.push({round:current+1,distMi,errY,score,guess:gl,correct:[p.lat,p.lng]});
 
       correctMarker=L.circleMarker([p.lat,p.lng],{
-        color:'red',fillColor:'red',fillOpacity:1,radius:8,zIndexOffset:500
+        color:'red',fillColor:'red',fillOpacity:1,radius:8
       }).addTo(map)
         .bindPopup('Location')
         .openPopup();
@@ -412,12 +429,12 @@
       feedback.style.display='block';
     };
 
-    nextBtn.onclick = () => {
+    nextBtn.onclick=()=>{
       current++;
       nextRound();
     };
 
-    function showResults() {
+    function showResults(){
       gameDiv.style.display='none';
       resultsDiv.style.display='block';
 
@@ -429,32 +446,32 @@
       rounds.forEach(r=>{
         const tr=document.createElement('tr');
         tr.innerHTML=`
-          <td>${r.round}</td><td>${r.distMi}</td>
-          <td>${r.errY}</td><td>${r.score}</td>
+          <td>${r.round}</td>
+          <td>${r.distMi}</td>
+          <td>${r.errY}</td>
+          <td>${r.score}</td>
         `;
         resultsBody.appendChild(tr);
         total+=r.score;
 
-        L.circleMarker(r.guess,{color:'black',fillColor:'black',radius:6,zIndexOffset:1000})
-         .addTo(finalMap);
-        L.circleMarker(r.correct,{color:'red',fillColor:'red',radius:6,zIndexOffset:500})
-         .addTo(finalMap);
-        L.polyline([r.guess,r.correct],{color:'red',dashArray:'5,5'})
-         .addTo(finalMap);
+        L.circleMarker(r.guess,{color:'black',fillColor:'black',radius:6}).addTo(finalMap);
+        L.circleMarker(r.correct,{color:'red',fillColor:'red',radius:6}).addTo(finalMap);
+        L.polyline([r.guess,r.correct],{color:'red',dashArray:'5,5'}).addTo(finalMap);
 
-        bounds.push(r.guess,r.correct);
+        bounds.push(r.guess, r.correct);
       });
+
       totalScoreE.textContent=total;
       finalMap.fitBounds(L.latLngBounds(bounds).pad(0.2));
     }
 
-    function shuffle(a){return a.sort(()=>0.5-Math.random());}
+    // HELPERS
+    function shuffle(a){ return a.sort(()=>0.5 - Math.random()); }
     function haversine(lat1,lng1,lat2,lng2){
-      const R=6371,toRad=Math.PI/180;
-      const dLat=(lat2-lat1)*toRad,dLng=(lng2-lng1)*toRad;
-      const h=Math.sin(dLat/2)**2+
-              Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*
-              Math.sin(dLng/2)**2;
+      const R=6371, toRad=Math.PI/180;
+      const dLat=(lat2-lat1)*toRad, dLng=(lng2-lng1)*toRad;
+      const h=Math.sin(dLat/2)**2 +
+              Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*Math.sin(dLng/2)**2;
       return 2*R*Math.asin(Math.sqrt(h));
     }
   </script>
